crates/mabo-parser/tests/snapshots/parser__parse@optional_ids.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "struct SampleNamed {\n    field1: u32,\n    field2: u32 @100,\n    field3: u32,\n}\n\nstruct SampleUnnamed(u32, u32 @100, u32)\n\nenum SampleEnum {\n    Named {\n        field1: u32,\n        field2: u32 @100,\n        field3: u32,\n    },\n    Unit @50,\n    Unnamed(u32, u32 @100, u32),\n}"
input_file: crates/mabo-parser/tests/inputs/optional_ids.mabo
---
Schema {
    path: Some(
        "optional_ids.mabo",
    ),
    source: "struct SampleNamed {\n    field1: u32,\n    field2: u32 @100,\n    field3: u32,\n}\n\nstruct SampleUnnamed(u32, u32 @100, u32)\n\nenum SampleEnum {\n    Named {\n        field1: u32,\n        field2: u32 @100,\n        field3: u32,\n    },\n    Unit @50,\n    Unnamed(u32, u32 @100, u32),\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Struct,
                name: Name {
                    value: "SampleNamed",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    Brace,
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field1",
                            },
                            colon: Colon,
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                            comma: Some(
                                Comma,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field2",
                            },
                            colon: Colon,
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 100,
                                },
                            ),
                            comma: Some(
                                Comma,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "field3",
                            },
                            colon: Colon,
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                            comma: Some(
                                Comma,
                            ),
                        },
                    ],
                ),
            },
        ),
        Struct(
            Struct {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Struct,
                name: Name {
                    value: "SampleUnnamed",
                },
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    Parenthesis,
                    [
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                            comma: Some(
                                Comma,
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 100,
                                },
                            ),
                            comma: Some(
                                Comma,
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: None,
                            comma: None,
                        },
                    ],
                ),
            },
        ),
        Enum(
            Enum {
                comment: Comment(
                    [],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Enum,
                name: Name {
                    value: "SampleEnum",
                },
                generics: Generics(
                    [],
                ),
                brace: Brace,
                variants: [
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Named",
                        },
                        fields: Named(
                            Brace,
                            [
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field1",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field2",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 100,
                                        },
                                    ),
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "field3",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                            ],
                        ),
                        id: None,
                        comma: Some(
                            Comma,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Unit",
                        },
                        fields: Unit,
                        id: Some(
                            Id {
                                value: 50,
                            },
                        ),
                        comma: Some(
                            Comma,
                        ),
                    },
                    Variant {
                        comment: Comment(
                            [],
                        ),
                        name: Name {
                            value: "Unnamed",
                        },
                        fields: Unnamed(
                            Parenthesis,
                            [
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 100,
                                        },
                                    ),
                                    comma: Some(
                                        Comma,
                                    ),
                                },
                                UnnamedField {
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: None,
                                    comma: None,
                                },
                            ],
                        ),
                        id: None,
                        comma: Some(
                            Comma,
                        ),
                    },
                ],
            },
        ),
    ],
}
