crates/mabo-parser/tests/snapshots/parser__parse@schema_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}"
input_file: crates/mabo-parser/tests/inputs/schema_basic.mabo
---
Schema {
    path: Some(
        "schema_basic.mabo",
    ),
    source: "/// Basic struct.\nstruct SampleStruct {\n    a: u32 @1,\n    b: bool @2,\n}\n\n/// Sample enum.\nenum SampleEnum {\n    One @1,\n    Two(u32 @1, u64 @2) @2,\n    Three {\n        field1: u32 @1,\n        field2: bool @2,\n    } @3,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Basic struct.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Struct,
                name: Name {
                    value: "SampleStruct",
                },
                generics: None,
                fields: Named(
                    Brace,
                    Punctuated {
                        values: [
                            (
                                NamedField {
                                    comment: Comment(
                                        [],
                                    ),
                                    name: Name {
                                        value: "a",
                                    },
                                    colon: Colon,
                                    ty: Type {
                                        value: U32,
                                    },
                                    id: Some(
                                        Id {
                                            value: 1,
                                        },
                                    ),
                                },
                                Comma,
                            ),
                        ],
                        last: (
                            NamedField {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "b",
                                },
                                colon: Colon,
                                ty: Type {
                                    value: Bool,
                                },
                                id: Some(
                                    Id {
                                        value: 2,
                                    },
                                ),
                            },
                            Some(
                                Comma,
                            ),
                        ),
                    },
                ),
            },
        ),
        Enum(
            Enum {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Sample enum.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Enum,
                name: Name {
                    value: "SampleEnum",
                },
                generics: None,
                brace: Brace,
                variants: Punctuated {
                    values: [
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "One",
                                },
                                fields: Unit,
                                id: Some(
                                    Id {
                                        value: 1,
                                    },
                                ),
                            },
                            Comma,
                        ),
                        (
                            Variant {
                                comment: Comment(
                                    [],
                                ),
                                name: Name {
                                    value: "Two",
                                },
                                fields: Unnamed(
                                    Parenthesis,
                                    Punctuated {
                                        values: [
                                            (
                                                UnnamedField {
                                                    ty: Type {
                                                        value: U32,
                                                    },
                                                    id: Some(
                                                        Id {
                                                            value: 1,
                                                        },
                                                    ),
                                                },
                                                Comma,
                                            ),
                                        ],
                                        last: (
                                            UnnamedField {
                                                ty: Type {
                                                    value: U64,
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 2,
                                                    },
                                                ),
                                            },
                                            None,
                                        ),
                                    },
                                ),
                                id: Some(
                                    Id {
                                        value: 2,
                                    },
                                ),
                            },
                            Comma,
                        ),
                    ],
                    last: (
                        Variant {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "Three",
                            },
                            fields: Named(
                                Brace,
                                Punctuated {
                                    values: [
                                        (
                                            NamedField {
                                                comment: Comment(
                                                    [],
                                                ),
                                                name: Name {
                                                    value: "field1",
                                                },
                                                colon: Colon,
                                                ty: Type {
                                                    value: U32,
                                                },
                                                id: Some(
                                                    Id {
                                                        value: 1,
                                                    },
                                                ),
                                            },
                                            Comma,
                                        ),
                                    ],
                                    last: (
                                        NamedField {
                                            comment: Comment(
                                                [],
                                            ),
                                            name: Name {
                                                value: "field2",
                                            },
                                            colon: Colon,
                                            ty: Type {
                                                value: Bool,
                                            },
                                            id: Some(
                                                Id {
                                                    value: 2,
                                                },
                                            ),
                                        },
                                        Some(
                                            Comma,
                                        ),
                                    ),
                                },
                            ),
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                        },
                        Some(
                            Comma,
                        ),
                    ),
                },
            },
        ),
    ],
}
