crates/mabo-parser/tests/snapshots/parser__parse@struct_basic.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Basic struct.\nstruct Sample {\n    a: u32 @1,\n    /// Second field\n    b: bool @2,\n}"
input_file: crates/mabo-parser/tests/inputs/struct_basic.mabo
---
Schema {
    path: Some(
        "struct_basic.mabo",
    ),
    source: "/// Basic struct.\nstruct Sample {\n    a: u32 @1,\n    /// Second field\n    b: bool @2,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Basic struct.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                            },
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [
                                    CommentLine {
                                        value: "Second field",
                                    },
                                ],
                            ),
                            name: Name {
                                value: "b",
                            },
                            ty: Type {
                                value: Bool,
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
