crates/mabo-parser/tests/snapshots/parser__parse@struct_generics.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}"
input_file: crates/mabo-parser/tests/inputs/struct_generics.mabo
---
Schema {
    path: Some(
        "struct_generics.mabo",
    ),
    source: "/// Generic key-value pair.\nstruct KeyValue<K, V> {\n    key: K @1,\n    value: V @2,\n}\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Generic key-value pair.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "KeyValue",
                },
                generics: Generics(
                    [
                        Name {
                            value: "K",
                        },
                        Name {
                            value: "V",
                        },
                    ],
                ),
                fields: Named(
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "key",
                            },
                            ty: Type {
                                value: External(
                                    ExternalType {
                                        path: [],
                                        name: Name {
                                            value: "K",
                                        },
                                        generics: [],
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "value",
                            },
                            ty: Type {
                                value: External(
                                    ExternalType {
                                        path: [],
                                        name: Name {
                                            value: "V",
                                        },
                                        generics: [],
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
