crates/mabo-parser/tests/snapshots/parser__parse@struct_many_ws.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }"
input_file: crates/mabo-parser/tests/inputs/struct_many_ws.mabo
---
Schema {
    path: Some(
        "struct_many_ws.mabo",
    ),
    source: "\n /// Some comment\n       struct      Sample<\n            T\n        >  {\n\n      a:    u32    @1,\n      b:    bool   @2,\n      c:    T      @3,\n    }\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Some comment",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                keyword: Struct,
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [
                        Name {
                            value: "T",
                        },
                    ],
                ),
                fields: Named(
                    Brace,
                    [
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "a",
                            },
                            colon: Colon,
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                            comma: Some(
                                Comma,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "b",
                            },
                            colon: Colon,
                            ty: Type {
                                value: Bool,
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                            comma: Some(
                                Comma,
                            ),
                        },
                        NamedField {
                            comment: Comment(
                                [],
                            ),
                            name: Name {
                                value: "c",
                            },
                            colon: Colon,
                            ty: Type {
                                value: External(
                                    ExternalType {
                                        path: [],
                                        name: Name {
                                            value: "T",
                                        },
                                        angle: None,
                                        generics: [],
                                    },
                                ),
                            },
                            id: Some(
                                Id {
                                    value: 3,
                                },
                            ),
                            comma: Some(
                                Comma,
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
