crates/mabo-parser/tests/snapshots/parser__parse@struct_tuple.mabo.snap
---
source: crates/mabo-parser/tests/parser.rs
description: "/// Basic struct.\nstruct Sample(u32 @1, bool @2)"
input_file: crates/mabo-parser/tests/inputs/struct_tuple.mabo
---
Schema {
    path: Some(
        "struct_tuple.mabo",
    ),
    source: "/// Basic struct.\nstruct Sample(u32 @1, bool @2)\n",
    comment: Comment(
        [],
    ),
    definitions: [
        Struct(
            Struct {
                comment: Comment(
                    [
                        CommentLine {
                            value: "Basic struct.",
                        },
                    ],
                ),
                attributes: Attributes(
                    [],
                ),
                name: Name {
                    value: "Sample",
                },
                generics: Generics(
                    [],
                ),
                fields: Unnamed(
                    [
                        UnnamedField {
                            ty: Type {
                                value: U32,
                            },
                            id: Some(
                                Id {
                                    value: 1,
                                },
                            ),
                        },
                        UnnamedField {
                            ty: Type {
                                value: Bool,
                            },
                            id: Some(
                                Id {
                                    value: 2,
                                },
                            ),
                        },
                    ],
                ),
            },
        ),
    ],
}
